# SDL3Playground

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp  triangle.vert
